tests/ui/11-raw-in-for.stderr
error: Azumi: Raw() is not allowed inside html!.

       Raw() bypasses ALL of Azumi's safety guarantees — escaping, CSS scoping,
       compile-time validation, and security checks.

       ✅ Use Azumi's safe alternatives:

       // For injected text content — use {value} interpolation:
       html! { <p>{value}</p> }

       // For JSON data to JavaScript — use json_data! macro:
       html! { {azumi::json_data!("MY_DATA" = &data)} }

       // For CSS content — use <style> tag with {variable}:
       html! { <style>{GLOBAL_CSS}</style> }

       // For JavaScript content — use <script> tag with {variable}:
       html! { <script>{TRACKING_JS}</script> }

       ❌ Wrong — Raw() bypasses all safety:
       html! { @{Raw("...")} }
       html! { @{Raw(format!("..."))} }

       See: docs/guide.md
 --> tests/ui/11-raw-in-for.rs:7:14
  |
7 |             @{azumi::Raw(dangerous)}
  |              ^
